log/build_2025-04-14_14-10-00/vl53l8cx_ros/stderr.log
/home/susan/.local/lib/python3.10/site-packages/setuptools/_distutils/dist.py:289: UserWarning: Unknown distribution option: 'tests_require'
  warnings.warn(msg)
  File "/home/susan/osprey_ws/install/vl53l8cx_ros/lib/python3.10/site-packages/vl53l8cx_ros/nav_odom_tf_broadcaster.py", line 18
    qos_profile
    ^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

